--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "allowImportingTsExtensions": true,
     "lib": ["WebWorker", "DOM", "DOM.Iterable"]
   },
-  "exclude": ["playground", "node_modules", "dist"]
+  "include": ["src", "test"]
 }
