--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "changelogen": "^0.6.1",
     "connect": "^3.7.0",
     "crossws": "^0.4.1",
+    "elysia": "^1.3.4",
     "esbuild": "^0.25.5",
     "eslint": "^9.27.0",
     "eslint-config-unjs": "^0.4.2",
@@ -58,6 +59,7 @@
     "get-port-please": "^3.1.2",
     "h3-nightly": "^1.15.2-20250418-133010-0c9b276",
     "h3-v1": "npm:h3@^1.15.3",
+    "hono": "^4.7.11",
     "mitata": "^1.0.34",
     "obuild": "^0.2.1",
     "prettier": "^3.5.3",
