chore: remove `node-ts` script

--- a/package.json
+++ b/package.json
@@ -30,16 +30,15 @@
   ],
   "scripts": {
     "bench:bun": "bun run ./test/bench/bench.ts",
-    "bench:node": "pnpm node-ts --expose-gc --allow-natives-syntax ./test/bench/bench.ts",
+    "bench:node": "pnpm --expose-gc --allow-natives-syntax ./test/bench/bench.ts",
     "build": "obuild",
     "dev": "vitest",
     "lint": "eslint --cache . && prettier -c src test examples docs",
     "lint:fix": "automd && eslint --cache . --fix && prettier -c src test examples docs -w",
-    "node-ts": "node --disable-warning=ExperimentalWarning --experimental-strip-types",
     "play:bun": "bun ./test/fixture/bun.ts",
-    "play:node": "pnpm node-ts test/fixture/node.ts",
-    "play:plain": "pnpm node-ts test/fixture/plain.ts",
-    "play:web": "pnpm node-ts test/fixture/web.ts",
+    "play:node": "pnpm test/fixture/node.ts",
+    "play:plain": "pnpm test/fixture/plain.ts",
+    "play:web": "pnpm test/fixture/web.ts",
     "release": "pnpm test && pnpm build && changelogen --release --prerelease --publish --publishTag beta && git push --follow-tags",
     "test": "pnpm lint && pnpm test:types && vitest --run --coverage",
     "test:types": "tsc --noEmit --skipLibCheck"
