--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "h3",
-  "version": "2.0.0-beta.5",
+  "version": "2.0.0-rc.0",
   "description": "Minimal H(TTP) framework built for high performance and portability.",
   "homepage": "https://h3.dev",
   "repository": "h3js/h3",
@@ -40,7 +40,7 @@
     "play:node": "pnpm test/fixture/node.ts",
     "play:plain": "pnpm test/fixture/plain.ts",
     "play:web": "pnpm test/fixture/web.ts",
-    "release": "pnpm test && pnpm build && changelogen --release --prerelease --publish --publishTag beta && git push --follow-tags",
+    "release": "pnpm test && pnpm build && changelogen --release --prerelease --publish && git push --follow-tags",
     "test": "pnpm lint && pnpm test:types && vitest --run --coverage",
     "test:types": "tsc --noEmit --skipLibCheck"
   },
