--- a/package.json
+++ b/package.json
@@ -66,28 +66,28 @@
     "connect": "^3.7.0",
     "cookie-es": "^2.0.0",
     "crossws": "^0.4.1",
-    "elysia": "^1.4.19",
+    "elysia": "^1.4.21",
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
-    "eslint-config-unjs": "^0.5.0",
+    "eslint-config-unjs": "^0.6.2",
     "express": "^5.2.1",
     "fetchdts": "^0.1.7",
     "get-port-please": "^3.2.0",
-    "h3-nightly": "^2.0.0-20251212-101841-5405a1b",
+    "h3-nightly": "^2.0.1-rc.7",
     "happy-dom": "^20.0.11",
     "hono": "^4.11.3",
     "magic-string": "^0.30.21",
     "memoirist": "^0.4.0",
     "mitata": "^1.0.34",
-    "obuild": "^0.4.9",
-    "oxc-parser": "^0.106.0",
+    "obuild": "^0.4.10",
+    "oxc-parser": "^0.107.0",
     "prettier": "^3.7.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vitest": "^4.0.16",
-    "zod": "^4.2.1"
+    "zod": "^4.3.5"
   },
   "peerDependencies": {
     "crossws": "^0.4.1"
@@ -97,7 +97,7 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@10.26.2",
+  "packageManager": "pnpm@10.27.0",
   "engines": {
     "node": ">=20.11.1"
   }
