--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "play:web": "pnpm test/fixture/web.ts",
     "release": "pnpm test && pnpm build && changelogen --release --prerelease --publish && git push --follow-tags",
     "test": "pnpm lint && pnpm test:types && vitest --run --coverage",
-    "test:types": "tsc --noEmit --skipLibCheck"
+    "test:types": "tsgo --noEmit --skipLibCheck"
   },
   "resolutions": {
     "h3": "link:."
@@ -53,40 +53,41 @@
     "srvx": "^0.10.0"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^20.0.11",
+    "@happy-dom/global-registrator": "^20.3.0",
     "@mitata/counters": "^0.0.8",
     "@types/connect": "^3.4.38",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.0.8",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "@vitest/coverage-v8": "^4.0.16",
+    "@typescript/native-preview": "7.0.0-dev.20260115.1",
+    "@vitest/coverage-v8": "^4.0.17",
     "automd": "^0.4.2",
     "changelogen": "^0.6.2",
     "connect": "^3.7.0",
     "cookie-es": "^2.0.0",
     "crossws": "^0.4.1",
-    "elysia": "^1.4.21",
+    "elysia": "^1.4.22",
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-config-unjs": "^0.6.2",
     "express": "^5.2.1",
     "fetchdts": "^0.1.7",
     "get-port-please": "^3.2.0",
-    "h3-nightly": "^2.0.1-rc.7",
-    "happy-dom": "^20.0.11",
-    "hono": "^4.11.3",
+    "h3-nightly": "^2.0.1-rc.8",
+    "happy-dom": "^20.3.0",
+    "hono": "^4.11.4",
     "magic-string": "^0.30.21",
     "memoirist": "^0.4.0",
     "mitata": "^1.0.34",
-    "obuild": "^0.4.10",
-    "oxc-parser": "^0.107.0",
-    "prettier": "^3.7.4",
+    "obuild": "^0.4.14",
+    "oxc-parser": "^0.108.0",
+    "prettier": "^3.8.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "typescript": "^5.9.3",
-    "vite": "^7.3.0",
-    "vitest": "^4.0.16",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.17",
     "zod": "^4.3.5"
   },
   "peerDependencies": {
@@ -97,7 +98,7 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@10.27.0",
+  "packageManager": "pnpm@10.28.0",
   "engines": {
     "node": ">=20.11.1"
   }
