--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "2.0.1-rc.11",
   "description": "Minimal H(TTP) framework built for high performance and portability.",
   "homepage": "https://h3.dev",
-  "repository": "h3js/h3",
   "license": "MIT",
-  "sideEffects": false,
+  "repository": "h3js/h3",
+  "files": [
+    "dist"
+  ],
   "type": "module",
+  "sideEffects": false,
+  "types": "./dist/_entries/generic.d.mts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
@@ -25,17 +29,13 @@
     "./generic": "./dist/_entries/generic.mjs",
     "./tracing": "./dist/tracing.mjs"
   },
-  "types": "./dist/_entries/generic.d.mts",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "bench:bun": "bun run ./test/bench/bench.ts",
     "bench:node": "node --expose-gc --allow-natives-syntax ./test/bench/bench.ts",
     "build": "obuild",
     "dev": "vitest",
-    "lint": "eslint --cache . && prettier -c src test examples docs",
-    "lint:fix": "automd && eslint --cache . --fix && prettier -c src test examples docs -w",
+    "lint": "oxlint . && oxfmt --check .",
+    "format": "automd && oxlint --fix . && oxfmt .",
     "prepack": "pnpm build",
     "play:bun": "bun ./test/fixture/bun.ts",
     "play:node": "pnpm test/fixture/node.ts",
@@ -44,9 +44,6 @@
     "release": "pnpm test && pnpm build && changelogen --release --prerelease --publish && git push --follow-tags",
     "test": "pnpm lint && pnpm test:types && vitest --run --coverage",
     "test:types": "tsgo --noEmit --skipLibCheck"
-  },
-  "resolutions": {
-    "h3": "link:."
   },
   "dependencies": {
     "rou3": "^0.7.12",
@@ -82,6 +79,8 @@
     "mitata": "^1.0.34",
     "obuild": "npm:obuild-nightly@0.4.18-20260120-084242-d92d40b",
     "oxc-parser": "^0.110.0",
+    "oxfmt": "^0.26.0",
+    "oxlint": "^1.41.0",
     "prettier": "^3.8.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -98,8 +97,11 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@10.28.1",
+  "resolutions": {
+    "h3": "link:."
+  },
   "engines": {
     "node": ">=20.11.1"
-  }
+  },
+  "packageManager": "pnpm@10.28.1"
 }
