--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "rou3": "^0.7.12",
-    "srvx": "^0.11.1"
+    "srvx": "^0.11.2"
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^20.5.0",
@@ -61,7 +61,7 @@
     "@types/node": "^25.2.1",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
-    "@typescript/native-preview": "^7.0.0-dev.20260205.1",
+    "@typescript/native-preview": "7.0.0-dev.20260205.1",
     "@vitest/coverage-v8": "^4.0.18",
     "automd": "^0.4.3",
     "changelogen": "^0.6.2",
@@ -69,18 +69,18 @@
     "cookie-es": "^2.0.0",
     "crossws": "^0.4.4",
     "elysia": "^1.4.22",
-    "esbuild": "^0.27.2",
+    "esbuild": "^0.27.3",
     "express": "^5.2.1",
     "fetchdts": "^0.1.7",
     "get-port-please": "^3.2.0",
-    "h3": "^2.0.1-rc.11",
-    "h3-nightly": "^2.0.0-20260205-145644-e4345e9",
+    "h3": "link:",
+    "h3-nightly": "2.0.0-20260205-230929-8312559",
     "happy-dom": "^20.5.0",
     "hono": "^4.11.7",
     "magic-string": "^0.30.21",
     "memoirist": "^0.4.0",
     "mitata": "^1.0.34",
-    "obuild": "^0.4.22",
+    "obuild": "^0.4.23",
     "oxc-parser": "^0.112.0",
     "oxfmt": "^0.28.0",
     "oxlint": "^1.43.0",
