chore: update deps

--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "@mitata/counters": "^0.0.8",
     "@types/connect": "^3.4.38",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.3.0",
+    "@types/node": "^25.3.2",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
-    "@typescript/native-preview": "^7.0.0-dev.20260225.1",
+    "@typescript/native-preview": "7.0.0-dev.20260227.1",
     "@vitest/coverage-v8": "^4.0.18",
     "automd": "^0.4.3",
     "changelogen": "^0.6.2",
@@ -73,10 +73,10 @@
     "express": "^5.2.1",
     "fetchdts": "^0.1.7",
     "get-port-please": "^3.2.0",
-    "h3": "^2.0.1-rc.14",
-    "h3-nightly": "^2.0.0-20260225-085652-6f71db2",
+    "h3": "link:",
+    "h3-nightly": "latest",
     "happy-dom": "^20.7.0",
-    "hono": "^4.12.2",
+    "hono": "^4.12.3",
     "magic-string": "^0.30.21",
     "memoirist": "^0.4.0",
     "mitata": "^1.0.34",
